update joke html

--- a/assets/html/joke.html
+++ b/assets/html/joke.html
@@ -64,8 +64,8 @@
   <body>
     <div class="container">
       <div class="overlay">
-        <h1>Why can't a leopard hide?</h1>
-        <p class="punchline">Because it's always spotted</p>
+        <h1>What do you call an imaginary color?</h1>
+        <p class="punchline">A pigment of your imagination.</p>
       </div>
     </div>
   </body>
